--- a/Pinstagram/Pages/Shared/_LoginPartial.cshtml
+++ b/Pinstagram/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Pinstagram.Models;
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@using Pinstagram.Data.Models;
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 @{
     string returnUrl = null;
